upgraded to jetty 11 properly